--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,10 @@ body {
 }
 img {
   display: block;
-  max-width: 100;
+  max-width: 100%;
 }
 
 /* -----Navigation----- */
-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .container {
   width: 1200px;
   padding: 0px 15px;
@@ -126,34 +121,49 @@ section {
 .nav-link:focus {
   color: var(--accent-color);
 }
+.contacts-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .contacts-item {
-  margin-left: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
 }
-.contacts-item:last-child {
-  margin-right: 0;
-}
+
+/* .contacts-item + .contacts-item {
+
+} */
 .contacts-link {
+  display: flex;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   text-decoration: none;
+  justify-content: center;
+  text-align: center;
 }
-
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--accent-color);
 }
-.contacts-list {
-  display: flex;
+.contacts-icon {
+  margin-right: 10px;
 }
-
+.contacts-icon:hover,
+.contacts-icon:focus {
+  fill: var(--accent-color);
+}
 /* -----Hero------ */
 .main {
   background: var(--second-background-color);
   padding-top: 200px;
   padding-bottom: 200px;
   min-width: 1600px;
+  height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(
@@ -196,6 +206,36 @@ section {
 }
 
 /* -----Description------ */
+.container-description {
+  padding-top: 94px;
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.description-list {
+  display: flex;
+}
+.description-item {
+  display: block;
+  width: 270px;
+  height: 251px;
+  margin-right: 30px;
+}
+
+.button-client {
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  background-color: var(--second-button-color);
+  border-radius: 4px;
+  justify-content: center;
+  text-align: center;
+}
+
+.description-icon {
+  justify-content: center;
+  align-items: center;
+}
 .about-img {
   display: block;
 }
@@ -204,34 +244,28 @@ section {
   margin-top: 0;
   margin-bottom: 0;
 }
-.container-description {
-  display: flex;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.description-item {
-  margin-right: 30px;
-}
 .description-item:last-child {
   margin-right: 0;
 }
-.description-list {
-  display: flex;
-}
+
 .description-title {
   margin-bottom: 10px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--second-title-color);
+  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 .description-text {
   line-height: 1.71;
   color: var(--main-text-color);
+  text-align: left;
 }
 /* -----About us------ */
-section.container-about-us {
-  padding-top: 0;
+.container-about-us {
+  padding-top: 94px;
+  padding-bottom: 69px;
 }
 .about-us-title {
   margin-bottom: 50px;
@@ -255,6 +289,8 @@ section.container-about-us {
   background-color: var(--second-button-color);
 }
 .container-team {
+  padding-top: 119px;
+  padding-bottom: 69px;
   background-color: var(--second-button-color);
 }
 .team-list {
@@ -331,11 +367,69 @@ section.container-about-us {
 .team-social-link:focus .team-social-icon {
   fill: var(--first-button-color);
 }
+.section > .clients-container {
+  padding-top: 0;
+}
+
+.container-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-title-color);
+}
+/*---- clients ----*/
+
+.clients {
+  padding-top: 119px;
+  padding-bottom: 102px;
+}
+.client-list {
+  display: flex;
+  justify-content: center;
+}
+.client-item {
+  width: 170px;
+  height: 92px;
+}
+
+.client-item + .client-item {
+  margin-left: 30px;
+}
+.client-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  border-color: var(--icon-color);
+  color: var(--icon-color);
+  border: 1px;
+}
+.client-icon {
+  fill: currentColor;
+}
+.client-link:hover,
+.client-link:focus {
+  color: var(--accent-color);
+}
+
 /* -----Footer------ */
+.container-footer {
+  display: flex;
+}
 .footer {
+  display: flex;
   background: var(--second-background-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
+}
+
+.adress-footer {
+  padding-top: 52px;
+  padding-bottom: 68px;
+  margin-right: 70px;
 }
 .adress-list {
   margin-top: 20px;
@@ -356,7 +450,55 @@ section.container-about-us {
 .logo2 {
   color: var(--first-button-color);
 }
+.join {
+  padding-top: 64px;
+  padding-bottom: 108px;
+  justify-content: center;
+  align-items: center;
+}
+.join-title {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.join-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.join-item {
+  width: 44px;
+  height: 44px;
+}
+.join-item + .join-item {
+  margin-left: 10px;
+}
+.join-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.join-icon {
+  fill: var(--first-button-color);
+}
+.join-link:hover,
+.join-link:focus {
+  background-color: var(--accent-color);
+}
+
 /* ------Портфолио----- */
+.container-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .portfolio-img {
   display: block;
 }
@@ -368,6 +510,7 @@ section.container-about-us {
 .filtr-item {
   margin-right: 8px;
 }
+
 .filtr-item:last-child {
   margin-right: 0;
 }
